# rpmsg-lite

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: rpmsg_default_config.h
lib/include/platform/: CMakeLists.txt
lib/include/platform/nrf5340/: rpmsg_platform.h
lib/rpmsg_lite/: rpmsg_lite.c
lib/rpmsg_lite/porting/environment/: CMakeLists.txt
lib/rpmsg_lite/porting/platform/: CMakeLists.txt
lib/rpmsg_lite/porting/platform/nrf5340/: CMakeLists.txt  rpmsg_platform.c  rpmsg_platform_zephyr_ipm.c
